--- a/templates/html/settings.html
+++ b/templates/html/settings.html
@@ -14,7 +14,7 @@
         <!-- The compiled CSS file -->
         <link rel="stylesheet" href="/static/css/main.css">
         <script type=text/javascript src="{{
-            url_for('static', filename='js/main.js') }}"></script>
+            url_for('static', filename='js/settings.js') }}"></script>
 
         <!-- Web fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Source+Serif+Pro:700" rel="stylesheet">
