--- a/templates/html/history.html
+++ b/templates/html/history.html
@@ -8,28 +8,28 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Carta</title>
+        <title>Deer-B-Gone | History</title>
         <meta name="description" content="">
 
         <!-- The compiled CSS file -->
         <link rel="stylesheet" href="/static/css/main.css">
-
-		<script type=text/javascript src="{{
+        <script type=text/javascript src="{{
             url_for('static', filename='js/hist.js') }}"></script>
-			
+
         <!-- Web fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Source+Serif+Pro:700" rel="stylesheet">
 
         <!-- favicon.ico. Place these in the root directory. -->
-        <link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     </head>
-	<h3>Event Log</h3>
+	
     <body>
 		
         <div class="container pt3 pb3">
 
         <!-- Colors -->
+	<h2 class="text--gray pb1 border--bottom">History</h2>
         
 		<div id="tablePrint"> </div>
      
