--- a/templates/html/settings.html
+++ b/templates/html/settings.html
@@ -13,6 +13,7 @@
 
         <!-- The compiled CSS file -->
         <link rel="stylesheet" href="/static/css/main.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script type=text/javascript src="{{
             url_for('static', filename='js/settings.js') }}"></script>
 
@@ -55,6 +56,10 @@
             <button class="btn btn--default" id="save">
                 Save Settings
             </button>
+	    
+	    <span class="alert alert-success" id="success-alert" style="display:none;float:right;">&#9989; Saved Successfully</span>
+	    <span class="alert alert-error" id="error-alert" style="display:none;float:right;">&#10060; Saved Not Successful</span>
+
 
         </section>
 
