added labels to hist, err handling, and updated website

--- a/templates/html/history.html
+++ b/templates/html/history.html
@@ -29,6 +29,7 @@
         <div class="container pt3 pb3">
 
         <!-- Colors -->
+	<a class="btn btn--outline" href="/" style="float:right;">Back</a>
 	<h2 class="text--gray pb1 border--bottom">History</h2>
         
 		<div id="tablePrint"> </div>
