--- a/templates/html/testing.html
+++ b/templates/html/testing.html
@@ -30,6 +30,7 @@
 
         <!-- Type -->
         <section class="pb4 reading-font">
+	    <a class="btn btn--outline" href="/" style="float:right;">Back</a>
             <h2 class="text--gray pb1 border--bottom">Testing</h2>
             <br />
             <h3>Send custom instructions.</h3>
