--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -29,7 +29,7 @@
     <header class="align--center pt3">
         <div class="container--lg border--bottom pb3 ">
             <!-- <img class="logo mb3" src="/static/img/logo.svg" alt="Carta"> -->
-            <h1 class="mb2">Deer-B-Gone | Admin Console</h1>
+            <h1 class="mb2">Deer-B-Gone | Admin Portal</h1>
             <!-- <span>
                 <a href="https://www.apple.com/ios/app-store/" class="link"><img class="download" src="/static/img/ios.png" alt="Download on the App Store"></a>
             </span>
@@ -43,7 +43,7 @@
 
         <!-- Feature list -->
         <div class="container pt3 mt2 text--gray align--center">
-            <p class="mb3">Manage your garden from anywhere in the world with the following options.</p>
+            <p class="mb3">Now that you're here, you can manage your garden from <i>anywhere</i></p>
             <div class="grid-row">
                 <div class="grid-column span-one-third mb3">
                     <a href="/settings">
@@ -81,11 +81,13 @@
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Usage data</h2>
-                        <p>Quis istud possit, inquit, negare? Videamus animi partes, quarum est conspectus illustrior; Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Non enim, si omnia non&nbsp;sequebatur.</p>
+                        <h2>Remote management</h2>
+                        <p>Manage your garden from anywhere in the world with this simple site. You'll have the ability to both whitelist and blacklist
+			particular animals (be they friend or foe!). And for each of animal you may select some appropriate action you'd like to perform
+			- whether it is day or night.</p>
                     </div>
-                    <p class="italic text--gray mb1">Quae quo sunt excelsiores, eo dant clariora indicia naturae. Causa autem fuit huc veniendi ut quosdam&nbsp;hinc.</p>
-                    <p class="bold">Carry Andersen, COO at&nbsp;Stripe</p>
+                    <p class="italic text--gray mb1">Without my Deer-B-Gone, I can never relax away from my garden. Now, if only I could water it from afar, too!</p>
+                    <p class="bold">Jim Hagedorn | CEO of Scotts Miracle-Gro (maybe)</p>
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1">
@@ -101,30 +103,23 @@
                 <div class="grid-column mt3 mb2">
                     <div class="border--bottom pb2 mb2">
                         <h2>Absolute security</h2>
-                        <p>Itaque his sapiens semper vacabit. Qualis ista philosophia est, quae non interitum afferat pravitatis, sed sit contenta mediocritate vitiorum? Quid de Platone aut de Democrito loquar? Quis istud possit, inquit&nbsp;negare?</p>
+                        <p>You might be thinking, "but I can manage my garden better on my own!" But are you able to see in the dark? Can you stay awake indefinitely
+			(provided you have electrical power)? Are you really confident that you can scare away a bear? If you answered yes to any of these questions
+			then we'll give you our system for free.</p>
                     </div>
-                    <p class="italic text--gray mb1">Estne, quaeso, inquam, sitienti in bibendo voluptas? Duo Reges: constructio&nbsp;interrete.</p>
-                    <p class="bold">Josh Blenton, Product Manager at&nbsp;Blinkist</p>
+                    <p class="italic text--gray mb1">I told them I can stay awake indefinitely and they just gave me a free Deer-B-Gone.</p>
+                    <p class="bold">The Sandman | Hokies' favorite mythical character</p>
                 </div>
             </div>
 
         </div>
 
-        <!-- Mentioned -->
-        <div class="container--lg pt3 pb3 mb2 align--center">
-            <span class=""><img class="mentioned" src="/static/img/tv.svg" alt="New York Times, TC, Product Hunt, Recode"></span>
-        </div>
-
         <!-- CTA -->
         <div class="bg--dark-gray align--center pt3 pb3">
             <div class="container pt2 pb2">
-                <img class="cta-image mb2" src="/static/img/text.svg" alt="Text the app">
-                <p class="h3 text--white mb1 bold">We'll text you the&nbsp;app</p>
-                <p class="text--white mb3">Just insert your number below. Messaging rates&nbsp;apply.</p>
-                <div class="inline-block mr1 no-mr-on-mobile" style="width: 280px; max-width:100%;">
-                    <input class="form-control" type="tel" placeholder="Phone number">
-                </div>
-                <button class="btn btn--secondary">Send</button>
+		<p class="h3 text--white mb1 bold">Brought to you by <i>Team 13</i></p>
+                <p class="text--white mb3">Steven, Christina, Ben</p>
+                <span class=""><img class="mentioned" src="/static/img/tv.svg" alt="As Seen On TV"></span>
             </div>
         </div>
 
@@ -143,7 +138,7 @@
                             <a href="https://play.google.com/store" class="link"><img class="download" src="/static/img/googleplay.png" alt="Download on Google Play"></a>
                         </span>
                     </div>
-                    <p class="small">Design by <a href="https://www.eatapapaya.com" class="link link--text">Papaya</a>. Illustrations from&nbsp;<a href="https://undraw.co/" class="link link--text">Undraw</a>.</p>
+                    <p class="small">Apps coming soon!<br/><br/>Thanks to <a href="https://www.eatapapaya.com" class="link link--text">Papaya</a> for the design and <a href="https://undraw.co/" class="link link--text">Undraw</a> for the illustrations.</p>
                 </div>
                 <div class="grid-column mt2 span-half align--right align--center-on-mobile">
                     <ul class="no-bullets list--inline">
