--- a/templates/html/settings.html
+++ b/templates/html/settings.html
@@ -31,6 +31,7 @@
 
         <!-- Type -->
         <section class="pb4 reading-font">
+            <a class="btn btn--outline" href="/" style="float:right;">Back</a>
             <h2 class="text--gray pb1 border--bottom">Settings</h2>
             <br />
             <h3>Whitelist.</h3>
@@ -58,7 +59,7 @@
             </button>
 	    
 	    <span class="alert alert-success" id="success-alert" style="display:none;float:right;">&#9989; Saved Successfully</span>
-	    <span class="alert alert-error" id="error-alert" style="display:none;float:right;">&#10060; Saved Not Successful</span>
+	    <span class="alert alert-error" id="error-alert" style="display:none;float:right;">&#10060; Save Not Successful</span>
 
 
         </section>
