updated verbage on settings

--- a/templates/html/settings.html
+++ b/templates/html/settings.html
@@ -45,12 +45,12 @@
 			<br>
 
 			<h3>Daytime Responses.</h3> <!-- should be drop downs -->
-			<p>These are all sound-based responses to the animals on the blacklist. If none are specified, the default is "Get off my lawn".</p>
+			<p>These are all sound-based responses to the animals on the blacklist. If none are specified, the default is "Get Off My Lawn!".</p>
             <input class="form-control mb1" type="text" placeholder="Daytime Responses" id="daytime">
             <br>
 
 			<h3>Nighttime Responses.</h3> <!-- should be drop downs -->
-			<p>These are all light-based responses to the animals on the blacklist. If none are specified, the default is "Disco".</p>
+			<p>These are all light-based responses to the animals on the blacklist. If none are specified, the default is "white".</p>
             <input class="form-control mb1" type="text" placeholder="Nighttime Responses"  id="nighttime">
             <br>
 
